# turbo

./: .env.agno.template  Makefile  README.md  docker-compose.yaml
apps/agno/: Dockerfile  pyproject.toml  run_wordstat_mcp.py  test_agent_simple.py  test_mcp.py
apps/agno/app/: auth.py  electronics_support_agent.py  prompts.py  server.py  wordstat_agent.py  wordstat_agent_direct.py  wordstat_mcp.py
apps/ai-frontend/: middleware.ts  package.json  pnpm-lock.yaml
apps/ai-frontend/app/: layout.tsx  page.tsx
apps/ai-frontend/components/: AuthGuard.tsx  MarkdownText.tsx  MyAssistant.tsx  Navigation.tsx
apps/ai-frontend/lib/: api.ts  auth-context.tsx  auth.ts
apps/backend/: Dockerfile  diagnose_search.py  pyproject.toml
apps/backend/api/: admin.py  api.py  celery.py  models.py  serializers.py  urls.py
apps/backend/customers/: admin.py  serializers.py  tasks.py  views.py
apps/backend/goods/: admin.py  indexers.py  models.py  rag_urls.py  rag_utils.py  rag_views.py  serializers.py  tasks.py  views.py
apps/backend/persons/: admin.py  serializers.py  views.py
apps/backend/rfqs/: admin.py  models.py  serializers.py  views.py
apps/backend/sales/: admin.py  serializers.py  tasks.py  views.py
apps/backend/stock/: admin.py  models.py  serializers.py  tasks copy.py  tasks.py  views.py
apps/frontend/: Dockerfile  README.md  env.example.txt  package.json  pnpm-lock.yaml
apps/frontend/src/: middleware.ts
apps/langgraph-api/: README_REASONING.md  pyproject.toml  reasoning_example.py
apps/langgraph-api/app/: auth.py  (+3 more)
apps/proxy/: Caddyfile.ce  Caddyfile.self
(+162 files in other folders)
